# little-matrix

./: .gitignore  LICENSE  README.md  config.yaml  little_matrix.db  pyproject.toml
src/: main.py  renderer.py
src/agents/: agent.py  behaviors.py
src/data/: storage.py
src/environment/: objects.py  world.py  world_helpers.py
src/llm/: client.py  prompts.py
src/utils/: config.py  logger.py
